--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
     </style>
 </head>
-<body class="font-eb">
+<body class="font-eb space-y-4 lg:space-y-0">
 <header class="mx-5 lg:mx-28 my-11">
     <! NAV BER >    
     <nav>
@@ -76,7 +76,7 @@
                           </li>                 
                       </ul>
                     </div>
-              <a class="btn btn-ghost text-xl"><div class="font-extrabold text-[#414040] text-xl lg:text-4xl flex items-center gap-2 lg:gap-x-4"> <img src="icon/Group 1.png" alt=""><h1 class=""><span class="text-[#B68C5A]">SEA </span>Law</h1></div></a>
+              <a class="btn btn-ghost text-xl"><div class="font-extrabold text-[#414040] text-xl lg:text-4xl flex items-center gap-1 lg:gap-2 lg:gap-x-4"> <img src="icon/Group 1.png" alt=""><h1 class=""><span class="text-[#B68C5A]">SEA </span>Law</h1></div></a>
             </div>
             <div class="navbar-center text-2xl hidden lg:flex">
               <ul class="menu menu-horizontal px-1">
@@ -128,19 +128,19 @@
               </ul>
             </div>
             <div class="navbar-end">
-              <a class="btn lg:btn-active lg:btn-secondary bg-[#B68C5A] font-semibold lg:text-xl">Free Consultation</a>
+              <a class="btn lg:btn-active lg:btn-secondary bg-[#B68C5A] font-semibold lg:text-xl">Consultation</a>
             </div>
           </div>
     </nav>
     <!We Provide Effective>
-    <section class="my-10 lg:my-20">
+    <section class="lg:my-10 lg:my-20">
         <div class="card image-full text-[#FFF]">
             <figure><img src="images/ban.png" alt="Banner" /></figure>
             <div class="card-body text-center lg:px-40 lg:py-36 space-y-8">
               <h2 class="font-extrabold text-2xl lg:text-5xl"> We Provide Effective <br> Legal Solutions</h2>
               <p class="text-lg lg:text-xl lg:px-40">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-              <div class="ml-20 lg:flex text-center space-y-4">
-                <input class=" h-16 lg:w-96 lg:p-4 text-2xl rounded-lg shadow-lg
+              <div class="lg:ml-20 lg:flex text-center space-y-4">
+                <input class=" h-16 lg:w-96 p-2 lg:p-4 text-2xl rounded-lg shadow-lg
                 " placeholder="Search your services" type="text"> 
                 <a class="btn lg:ml-8 lg:btn-active lg:btn-secondary bg-[#B68C5A] h-16 w-40 font-semibold lg:text-2xl">Search</a>
               </div>
